Add NDX Open and close price to downloadCSV function

--- a/index.html
+++ b/index.html
@@ -823,7 +823,8 @@
                 const totalValue = activeInvestmentValue + passivePortfolioValue;
                 const passiveProfit = (price - passiveInvestmentPrice) * passiveShares;
                 const activeProfit = totalProfit + activeInvestments.reduce((sum, inv) => sum + inv.shares * price, 0);
-
+                const ndxData = filteredNDXStockData.find(ndx => ndx.date === data.date);
+                
                 totalPortfolioValues.push({ x: dataDate, y: totalValue });
                 totalCashValues.push({ x: dataDate, y: cash, dropPercentage: dropFromHighestPeak.toFixed(2) });
 
@@ -889,7 +890,9 @@
                     activeCashInvested: activeCashInvested.toFixed(2),
                     totalValue: totalValue.toFixed(2),
                     totalAmount: (cash + passivePortfolioValue).toFixed(2),
-                    valuePassive: (passiveShares * price).toFixed(2)
+                    valuePassive: (passiveShares * price).toFixed(2),
+                    ndxOpen: ndxData ? ndxData.openPrice : 'N/A',
+                    ndxClosePrice: ndxData ? ndxData.price : 'N/A'
                 });
             });
 
@@ -1180,7 +1183,7 @@
             const headers = [
                 'Date', 'Action', 'Shares Bought', 'Shares Sold', 'Buy Price', 'Sell Price', 'Open Price', 'High Price', 'Low Price', 'Close Price',
                 'Total Cash', 'Stocks Held', 'Passive Shares', 'Total Shares', 'Highest Peak',
-                'Passive Profit', 'Active Profit', 'Active Cash Invested', 'Total Value', 'Value Passive', 'Drop % From Highest Peak' // Add column here
+                'Passive Profit', 'Active Profit', 'Active Cash Invested', 'Total Value', 'Value Passive', 'Drop % From Highest Peak', 'NDX Open', 'NDX Close'
             ];
             csvRows.push(headers.join(','));
 
@@ -1206,7 +1209,9 @@
                     log.activeCashInvested,
                     log.totalValue,
                     log.valuePassive,
-                    log.downPercentageFromPeak
+                    log.downPercentageFromPeak,
+                    log.ndxOpen,
+                    log.ndxClosePrice
                 ];
                 csvRows.push(row.join(','));
             });
